--- a/client/sass/_defaults.scss
+++ b/client/sass/_defaults.scss
@@ -1,6 +1,66 @@
+$themeColor: #6A9E3A;
+$themeAlt: #97B99F;
+$textColor: #1A1A1D;
+$lightTextColor: #555;
+$colorGood: #1DB141;
+$colorOk: #C29B21;
+$colorBad: #CF4B4B;
+$navbarHeight: 4.0em;
+$headerHeight: 2.25em;
+
 html, body {
     font-family: "GothamRounded", Helvetica, Arial, sans-serif;
+    font-size: 18px;
+    font-weight: 400;
     background-color: #FFF;
-    color: #1A1A1D;
+    color: $textColor;
     text-align: center;
+}
+h1 {
+	position: fixed;
+	width: 100%;
+	top: 0;
+	text-align: center;
+	color: #fff;
+	background-color: $themeColor;
+	font-weight: 500;
+	height: $headerHeight;
+	line-height: $headerHeight;
+}
+h2 {
+	font-weight: 500;
+	text-align: left;
+	margin: 1.0em;
+	padding-bottom: 0.25em;
+	border-bottom: solid 2px $themeColor;
+
+	i.fa {
+		color: lighten($textColor,50%);
+		margin-right: 0.5em;
+	}
+}
+#pageContent {
+	margin-top: $headerHeight;
+	padding-top: 0.25em;
+	padding-bottom: $navbarHeight;
+}
+.section {
+	margin-bottom: 1.5em;
+}
+.button {
+	cursor: pointer;
+	font-size: 0.75em;
+	font-weight: 400;
+	border-radius: 4px;
+	padding: 0 1.0em;
+	background-color: $themeColor;
+	color: #fff;
+	border-bottom: solid 2px darken($themeColor,10%);
+	height: 2.0em;
+	line-height: 2.0em;
+
+	&.hover {
+		background-color: lighten($themeColor,10%);
+		border-bottom: solid 2px lighten(darken($themeColor,10%),10%);
+	}
 }
