--- a/client/templates/pages/entry.html
+++ b/client/templates/pages/entry.html
@@ -5,6 +5,14 @@
 		<span>{{dateStr}}</span>
 		<i class="fa fa-angle-right next"></i>
 	</h1>
+
+	<div class="weightSection section">
+		<div class="label">WEIGHT (LBS)</div>
+		<div class="weight">
+			<span class="value">135.2</span>
+		</div>
+	</div>
+
 	<div class="exerciseSection section">
 		<h2>
 			<span><i class="fa fa-heart"></i> Workout</span>
