--- a/client/templates/pages/entry.html
+++ b/client/templates/pages/entry.html
@@ -3,13 +3,12 @@
 	<h1>
 		<i class="fa fa-angle-left prev"></i>
 		<span>{{dateStr}}</span>
-		<i class="fa fa-angle-right next"></i>
 	</h1>
 
 	<div class="weightSection section">
 		<div class="label">WEIGHT (LBS)</div>
 		<div class="weight">
-			<span class="value">135.2</span>
+			<span class="value editable">135.2</span>
 		</div>
 	</div>
 
@@ -21,7 +20,11 @@
 		<div class="exerciseList entryList">
 			<div class="exercise">
 				<div class="title">
-					<span><i class="toggle fa fa-angle-down"></i> Dumbell Bench</span>
+					<span>
+						<i class="toggle fa fa-angle-down"></i>
+						Dumbell Bench
+						<i class="edit fa fa-wrench"></i>
+					</span>
 					<i class="fa fa-times-circle delete"></i>
 				</div>
 				<div class="sets">
@@ -106,17 +109,25 @@
 			<div class="meals">
 				<div class="meal">
 					<div class="title">
-						<span><i class="toggle fa fa-angle-down"></i> Breakfast</span>
+						<span>
+							<i class="toggle fa fa-angle-down"></i>
+							Breakfast
+							<i class="edit fa fa-wrench"></i>
+						</span>
 						<i class="fa fa-times-circle delete"></i>
 					</div>
-					<div class="description">Dim sum at Dragon King</div>
+					<div class="description editable">Dim sum at Dragon King</div>
 				</div>
 				<div class="meal">
 					<div class="title">
-						<span><i class="toggle fa fa-angle-down"></i> Lunch</span>
+						<span>
+							<i class="toggle fa fa-angle-down"></i>
+							Lunch
+							<i class="edit fa fa-wrench"></i>
+						</span>
 						<i class="fa fa-times-circle delete"></i>
 					</div>
-					<div class="description">Dim sum at Dragon King</div>
+					<div class="description editable">Dim sum at Dragon King</div>
 				</div>
 			</div>
 			<div class="controls">
