--- a/client/templates/pages/home.html
+++ b/client/templates/pages/home.html
@@ -1,6 +1,8 @@
 <template name="homePage">
 <div id="homePage" class="page">
+	<h1>
+		<i class="fa fa-home"></i> Home
+	</h1>
 	<div id="datepicker"></div>
 </div>
-<div id="button">ADD WORKOUT</div>
 </template>
